tests/negative/neg_pr113_float_discriminant.safe
package neg_PR113_Float_Discriminant
   type packet (Weight : float = 1.0) is
      record
         value : integer;


